# tinychat

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: demo_site.md  kaggle_runbook.md  phase2_static_site_target.md  related_work.md
eval/: calibration.md  judge.py  run_eval.py
notebooks/: nanofable-training.ipynb  tinychat-training.ipynb
results/: summary.csv
scripts/: build_dataset.py  build_tokenizer.py  export_model.py  make_prefixes.py  pack_model.py  plot_frontier.py  plot_frontier_showcase.py  run_calibration.py  run_sweep.py  summarize_results.py
specs/: idea2_ternary_emergence_frontier_spec.md
src/nanofable/: __init__.py  bitlinear.py  bytes.py  config.py  data.py  flops.py  generate.py  kaggle.py  model.py  pack.py  rope.py  sweep.py  tokenizer.py
src/tinychat/: kaggle.py  plotting.py  sweep.py  train.py
tests/: conftest.py  test_bitlinear.py  test_bytes.py  test_calibration_helpers.py  test_checkpoint.py  test_config.py  test_data.py  test_eval_ppl.py  test_flops.py  test_generate.py  test_judge.py  test_kaggle.py  test_model.py  test_pack.py  test_plot.py  test_rope.py  test_run_eval.py  test_sweep.py  test_tokenizer.py  test_train_smoke.py
web/: index.html  manifest.json  style.css  tokenizer.json
web/js/: app.js  display.js  model.js  pack.js  tokenizer.js
web/models/: .gitignore
